# logs-manager

./: README.md  pyproject.toml  setup.py
logsmanager/: __init__.py  log.py
