[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logsmanager"
version = "0.0.1"
description = "Manager of logging"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Carmine Somma", email = "carsomma@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12.0",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["logging", "log-management"]
dependencies = []


[tool.setuptools.packages.find]
include = ["logsmanager"]
